--- a/root/index.html
+++ b/root/index.html
@@ -120,29 +120,37 @@
 
       <p>
         Il Castello di Alice Via Nazionale, 180 - Ponte a Moriano (LU)
-        Cellulare: 3484347354 e-mail: info@ilcastellodialice.it
+       <br> Cellulare: 3484347354 <br> e-mail: info@ilcastellodialice.it
       </p>
     </div>
 
-    <div
-      style="
-        background-image: linear-gradient(
-          to bottom,
-          #ffffff 0%,
-          /* bianco */ #fffde7 40%,
-          /* giallo chiarissimo */ #fff9c4 100% /* giallo canarino soft */
-        );
-        height: 10vh;
-        padding-bottom: 10vh;
-      "
-    ></div>
+    <svg viewBox="0 0 1440 160" xmlns="http://www.w3.org/2000/svg" style=" background-color: #ee9b00; display:block">
+  <path fill="#BB3E04" d="M0,96L80,112C160,128,320,160,480,160C640,160,800,128,960,117.3C1120,107,1280,117,1360,122.7L1440,128V160H0Z"/>
+  <path fill="#BB3E04" fill-opacity="0.7" d="M0,128L80,138.7C160,149,320,171,480,170.7C640,171,800,149,960,138.7C1120,128,1280,139,1360,144L1440,149V160H0Z"/>
+  <path fill="#BB3E04" fill-opacity="0.5" d="M0,160L80,154.7C160,149,320,139,480,138.7C640,139,800,149,960,154.7C1120,160,1280,160,1360,160L1440,160V160H0Z"/>
+</svg>
 
-    <div class="footer">
-      <label for="telefono">telefono</label>
-      <ul>
-        <li>00000000000</li>
-      </ul>
+<div style="display: block;">
+  <div class="footer">
+      <div style="width: 50%; display: flex; flex-direction: column; justify-content: center; align-items: center;">
+        <br>
+      </br>
+        <a href="">Scopri il nostro regolamento</a>
+        <a href="">Scopri novità ed eventi </a>
+        <a href="">Effettua un tour del castello</a>
+      </div>
+      <div style="width: 50%; display: flex;flex-direction: column; justify-content: center; align-items: center;">
+        <img src="./images/logo_castello_di_alice.png" alt="">
+        <div class="container-social-btn-footer">
+          <button class="btn-primary"><i class="fa-brands fa-facebook" style="color: blue;"></i></button>
+          <button class="btn-primary"><i class="fa-brands fa-whatsapp" style="color: green;"></i></button>
+          <button class="btn-primary"><i class="fa-brands fa-tiktok" style="color: black;"></i></button>
+          <button class="btn-primary"><i class="fa-brands fa-instagram" style="color: #73118c;"></i></button>
+        </div>
+      </div>
     </div>
+</div>
+
     <script>
       // Lista delle immagini disponibili
       const images = ["castelloIMG.png", "unnamed (2).jpg", "unnamed.jpg"];
